static/css/panel.styl
#container
  height 100%
  margin 0
  padding 0
#home-container
  @extend #container
  width 100%
  position fixed

sideNavTransition = 0.3s
sideNavMargin = 400px
borderColor = #e4e4e4
sideNavColor = #337ab7

#header-panel
  display: block !important
  position relative
  background-color #f8f8f8
  border-bottom 1px solid
  border-color borderColor
  padding 0
  .navbar
    border none
    margin-bottom 0
    .navbar-header
      padding-top 9px

#body-panel
  border 0
  display: block !important
  position relative
  height: 100%

#main-panel
  position fixed
  margin-right 0
  margin-left 0
  padding 0
  padding-left 5px
  padding-right 5px
  z-index 10
  width 100%
  height 100%
  transition sideNavTransition
  border 0
  &.closed
    margin-left 0
    padding-right 5px
  &.left
    margin-left sideNavMargin
    padding-right sideNavMargin
  &.right
    padding-right sideNavMargin
    margin-left 0

#main-middle-panel
  transition: margin-bottom .5s
  height 85% !important
  width 100%
  margin-bottom 0
  &.messages-closed
    margin-bottom 0
  &.messages-opened
    margin-bottom 150px !important
#csvEditor
  height 90%
  width 100%
.tab-pane
  height 100%
  width 100%
  // position fixed

#csvContent
  background url("~static/img/data-curator-background.svg") no-repeat fixed !important
  background-size 300px !important
  background-position 50% 60% !important
  height 100%
  width 100%
  .editor
    overflow: scroll
    height: 100%
    width 100%

.loading-pane
  position fixed
  top 0
  left 0
  height 100%
  width 100%
  z-index 2000
  background-color rgba(0,0,0,0.4)

.modalHide
  display: none
.modal1
  width 300px
  height 200px
  line-height 200px
  position fixed
  top 50%
  left 50%
  margin-top -100px
  margin-left -150px
  background-color #f8f8f8
  border-radius 5px
  text-align center
  z-index 2005 /* 1px higher than the overlay layer */
  .glyphicon.spinning
    animation spin 1s infinite linear
    -webkit-animation spin2 1s infinite linear
    margin-top 10px
    vertical-align top
    display block
  .validation-load
    display block
    vertical-align bottom
    font-size 1.3em
    text-align: center

sideNavHeaderHeight = 55px
#sidenav
  height calc(100% - 55px)
  position absolute
  margin 0
  z-index 50
  border-radius 0
  top 0
  overflow-x: hidden
  overflow-y: hidden
  transition sideNavTransition
  border-top solid 3px sideNavColor
  &.closed
    width 0 !important
    border 0 !important
  &.left
    width sideNavMargin
    left 0
    border-right solid 3px sideNavColor
  &.right
    width sideNavMargin
    right 0
    border-left solid 3px sideNavColor
  div.row
    //   border 0
    // height 250px
    position relative
    //   padding 0
    //   margin-top 0
  .navbar-header
    position relative
    top 0
    overflow-y hidden
    background-color sideNavColor
    display block !important
    height sideNavHeaderHeight !important
    width 100%
    z-index 70
    .navbar-brand
      position relative
      text-transform: capitalize
      color #fff
    .closebtn
      position absolute
      top 0
      margin 0
      padding 0
      z-index 75
      right 0
    a
      background-color inherit !important
  &.left
    .btn-default
      color #000 !important

  form
    clear both
    z-index 30
    min-height 250px !important
    height 300px
    margin-top sideNavHeaderHeight !important
    margin-bottom 70px
    overflow-x hidden
    overflow-y scroll !important
    padding 10px 10px 0 15px !important
    position relative !important
    display block !important
    label
      text-align left
      padding-left 0 !important
      display inline-block
    div
    input
      width auto
    select
      height auto
  // .row
  //   height 100px
  //   position relative

sideNavFooterHeight = 70px
#aboutProperties
  @extend #sidenav form
  max-height calc(100% - 70px) !important

#main-bottom-panel
  box-sizing border-box !important
  height 55px
  width: 100%
  position fixed
  bottom 0
  left 0
  z-index 200 !important
  transition: 0.5s
  &.messages-closed
    height 0
  &.messages-opened
    height 150px !important
    overflow-y scroll
  &.closed
    margin-left 0
    padding-right 5px
  &.left
    margin-left sideNavMargin
    padding-right sideNavMargin
  &.right
    padding-right sideNavMargin
    margin-left 0

#sidenav-footer
  z-index 100
  width 100%
  position absolute !important
  bottom 0 !important
  height sideNavFooterHeight
  display: block
  padding 0
  margin 0
  // overflow-y hidden
  .left
    float left
    display inline-block
    // &.disabled
    //   pointer-events none
    //   cursor default
  .right
    float right
    display inline-block
    // &.disabled
    //   pointer-events none
    //   cursor default

#tablePropertiesBtn
  float left
  margin-left: 15px

#csvTab a
  position relative

span.tabclose
  position absolute
  top 0
  right 0

// tab close buttons
span.tabclose.btn-default
  color #ccc !important

span.tabclose.btn-default:hover
  color #333 !important

.input-sm input
  display inline-block !important

// slide-out sideNav transitions
.sideNav-right-enter-active
.sideNav-left-enter-active
  transition all 0.4s ease-in
.sideNav-left-leave-active
.sideNav-right-leave-active
  transition all 0.3s ease-in

.sideNav-left-enter
  transform translateX(-(sideNavMargin)) !important
.sideNav-right-enter
  transform translateX(sideNavMargin) !important

.sideNav-left-leave-to
  transform translateX(250px) !important
.sideNav-right-leave-to
  transform translateX(-250px) !important

.btn-default
  background-color transparent !important
  color white

#preferenceProperties
  width inherit !important
  margin 0 -15px 0 -15px
  a
    border none

#toolbar li
  text-align center
  display: inline-block !important
  i
  object
  a
  div
    margin 0

#toolbar li object
  max-width 13px
  max-height 13px
  // &.down
  //   margin-bottom -2px

#tableProperties .form-control
  width auto !important

#columnProperties option
  width auto

